fix header signin and profile pic misalignment

--- a/app/stylesheets/partials/_layout.sass
+++ b/app/stylesheets/partials/_layout.sass
@@ -114,7 +114,8 @@ a.highlight
     #signin
       background-color: #052336
       height: 32px
-      float: right
+      float: left
+      margin-left: 38px
       padding: 18px 50px 0px 50px
       a
         font-color: white
@@ -124,10 +125,47 @@ a.highlight
     #profile-pic
       width: 50px
       height: 50px
-      float: right
-      margin-right: -64px
-      
-   
+      float: left
+      margin-left: 145px
+
+#content
+  #itunes_store
+    +column(24, true)
+    img
+      display: block
+      margin-bottom: 20px
+      margin-left: 22px
+    #text-banner
+      background-color: #f9f8da
+      height: 38px
+      margin-left: -30px
+      font-family: 'Scala', Georgia, sans-serif
+      #message
+        display: inline-block
+        margin-left: 90px
+        margin-top: 11px
+        float: left
+      #books
+        margin: 7px 0px 0px 15px
+        float: left
+        
+      #iphone, #ipad
+        float: left
+      #iphone
+        margin: 7px 0px 0px 80px
+      #ipad
+        margin: 7px 0px 0px 12px
+      img
+        float: left
+        display: inline-block
+        margin: 7px 0px 0px 12px
+      .bigbold
+        font-size: 20px
+        font-weight: bold
+      .small
+        font-size: 14px
+        font-weight: regular
+
 #bottom-shadow
   :float left
   :display block
